<resources>
    <string name="app_name">GestionContactGI</string>
    <string name="contacts">Contacts</string>
    <string name="ajouter_contact">Ajouter Contact</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="taper_le_nom">Taper le nom</string>
    <string name="taper_le_prenom">Taper le prenom</string>
    <string name="taper_le_num_ro_de_tel">Taper le numéro de tel</string>
    <string name="taper_l_adresse_mail">Taper l\'adresse mail</string>
    <string name="consuler_contact">Consuler contact</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier">Modifier</string>
    <string name="code">Code:</string>
    <string name="ok">Ok</string>
    <string name="nom">Nom:</string>
    <string name="prenom">Prenom:</string>
    <string name="telephone">Telephone:</string>
    <string name="mail">Mail:</string>
    <string name="facebook">FaceBook</string>
    <string name="twiter">Twiter</string>
    <string name="google">Google</string>
</resources>