<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterContact">

    <RelativeLayout
        android:id="@+id/cont1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/col1"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter_contact"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"/>
        <ImageButton
            android:id="@+id/btnRetour1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/back"
            android:layout_margin="5dp"/>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/cont2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/col1"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/layoutAnnuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/x_mark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annuler"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="@color/blanc"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAjouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/send"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajouter"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="@color/blanc"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cont2"
        android:layout_below="@id/cont1"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/textNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="30"
            android:hint="@string/taper_le_nom"
            android:textStyle="italic"
            android:textSize="35sp"
            android:background="@drawable/border"
            />
        <EditText
            android:id="@+id/textPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="30"
            android:hint="@string/taper_le_prenom"
            android:textStyle="italic"
            android:textSize="35sp"
            android:background="@drawable/border"
            />
        <EditText
            android:id="@+id/textTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="30"
            android:hint="@string/taper_le_num_ro_de_tel"
            android:textStyle="italic"
            android:textSize="35sp"
            android:background="@drawable/border"
            />
        <EditText
            android:id="@+id/textAdresseMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="30"
            android:hint="@string/taper_l_adresse_mail"
            android:textStyle="italic"
            android:textSize="35sp"
            android:background="@drawable/border"
            />

    </LinearLayout>

</RelativeLayout>