<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsulterContact">
    <RelativeLayout
        android:id="@+id/cont1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/col1"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consuler_contact"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"/>
        <ImageButton
            android:id="@+id/btnRetour2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/back"
            android:layout_margin="5dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cont2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/col1"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/layoutModifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/edit"
                android:layout_marginTop="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modifier"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="@color/blanc"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSupprimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/x_mark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supprimer"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textColor="@color/blanc"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cont3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cont1"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <EditText
            android:id="@+id/textCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btnRech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ok"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cont3"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/nom"
                android:textStyle="italic"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/nomVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:enabled="false"
                android:textStyle="italic"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/prenom"
                android:textStyle="italic"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/prenomVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:textStyle="italic"
                android:enabled="false"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/telephone"
                android:textStyle="italic"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/telVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:enabled="false"
                android:textStyle="italic"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/mail"
                android:textStyle="italic"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/mailVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:textStyle="italic"
                android:enabled="false"
                android:textSize="20sp"/>

        </LinearLayout>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="15dp"
            android:visibility="invisible"
            android:enabled="false"
            android:text="@string/ok"/>


    </LinearLayout>



</RelativeLayout>

